--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -15,7 +15,7 @@ Sequence-to-sequence modeling involves learning the function between one sequenc
 
 Encoder-decoder models are a special case of RNNs which can be used to generate the next element in a sequence using the probability of that element given the preceding elements and some vector \textit{c} which is a representation of the input sequence built using an ``encoding'' network. Thus, each token in the output sequence is conditioned on the representation of the entire input sequence as well as the previously predicted tokens \citep{goldberg.y:2017}.  In our case, the  encoder-decoder network will use an RNN or an LSTM to obtain a vector representation of the coded sequence and then condition on that representation to decode the sequence into plain text. 
 
-To test whether encoder-decoder models better decode complex cipher text, we will create both an RNN and LSTM encoder-decoders. We will also create simpler RNN and LSTM models which do not condition on the entire sequence, but merely on the current input character. \citet{greydanus.s:2017} showed that this simple LSTM architecture could decode the famously complex enigma cipher, which leads us to believe that the simpler models will be able to decode the ciphers as well as the more complex encoder-decoder model. 
+To test whether encoder-decoder models better decode complex cipher text, we will create both RNN and LSTM encoder-decoders. We will also create simpler RNN and LSTM models which do not condition on the entire sequence, but merely on the current input character. \citet{greydanus.s:2017} showed that this simple LSTM architecture could decode the famously complex enigma cipher, which leads us to believe that the simpler models will be able to decode the ciphers as well as the more complex encoder-decoder model. 
 
 We would like to test both RNN and LSTM models because LSTMs are less susceptible to vanishing or exploding gradients. Given the extremely small amount of data (13 exemplars) needed to obtain high results on the simpler two ciphers with the HMM, we expect that the HMM will outperform the neural network models on small datasets. However, with more training data, we hypothesize that the neural network models will obtain higher accuracies on all three ciphers; in particular, we are interested in seeing if the neural network models are able to learn the third cipher, which the HMM was unable to learn. We also hypothesize that even with additional training data the HMM will be unable to capture the structure of the third cipher, and the accuracy will remain low. Additionally, we expect the LSTM models to be more accurate than the simple RNN models on all three cipher texts. 
 
